attached timestamp and added scrollbar - closes issues #10 and #11

--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -33,7 +33,7 @@ button {
 	margin:10px 0;
 	padding:10px;
 	height:300px;
-	line-height:1.5em;
+	line-height:2em;
 	border:1px solid #ccc;
 	overflow-x:hidden;
     overflow-y:scroll;
